<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="104dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="8dp"
            android:text="@string/entry_Date"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="104dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="104dp"
            android:layout_marginStart="16dp"
            android:text="TextView"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView3" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonClicked"
            android:text="@string/prev" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:onClick="buttonClicked"
            android:text="@string/next" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="389dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.411">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingStart="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:orientation="horizontal">


                    <TextView
                        android:id="@+id/shower"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/shower" />

                        <TextView
                            android:id="@+id/t1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="8dp"
                            android:paddingLeft="8dp"
                            android:paddingStart="8dp"
                            android:text="@string/iniTotal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:orientation="horizontal">


                    <TextView
                        android:id="@+id/toilet"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/toilet" />

                        <TextView
                            android:id="@+id/t2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="8dp"
                            android:paddingLeft="8dp"
                            android:paddingStart="8dp"
                            android:text="@string/iniTotal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                    <TextView
                        android:id="@+id/hygiene"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/hygiene" />


                        <TextView
                            android:id="@+id/t3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="8dp"
                            android:paddingLeft="8dp"
                            android:paddingStart="8dp"
                            android:text="@string/iniTotal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                    <TextView
                        android:id="@+id/laundry"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/laundry" />


                        <TextView
                            android:id="@+id/t4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="8dp"
                            android:paddingLeft="8dp"
                            android:paddingStart="8dp"
                            android:text="@string/iniTotal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:orientation="horizontal">


                    <TextView
                        android:id="@+id/dish"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/dishes" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/t5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="8dp"
                            android:paddingLeft="8dp"
                            android:paddingStart="8dp"
                            android:text="@string/iniTotal" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                    <TextView
                        android:id="@+id/drink"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/drink" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/t6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="8dp"
                            android:paddingLeft="8dp"
                            android:paddingStart="8dp"
                            android:text="@string/iniTotal" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cook"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/cooking" />

                        <TextView
                            android:id="@+id/t7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="8dp"
                            android:paddingLeft="8dp"
                            android:paddingStart="8dp"
                            android:text="@string/iniTotal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                    <TextView
                        android:id="@+id/clean"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/cleaning" />

                        <TextView
                            android:id="@+id/t8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="8dp"
                            android:paddingLeft="8dp"
                            android:paddingStart="8dp"
                            android:text="@string/iniTotal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:orientation="horizontal">

                    <TextView
                        android:id="@+id/other"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:text="@string/other" />

                        <TextView
                            android:id="@+id/t9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="8dp"
                            android:paddingLeft="8dp"
                            android:paddingStart="8dp"
                            android:text="@string/iniTotal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/subtotal"
                    android:textStyle="bold"
                    app:fontFamily="serif" />

                <TextView
                    android:id="@+id/t10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:text="@string/iniTotal" />


            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>